--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "advanced-configuration-management",
   "version": "1.2.1",
   "description": "An easy to manage configuration manager",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index",
+  "types": "./dist/index",
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc",
